devel
-----

* Set threshold for RocksDB automatic WAL file deletion by age from 30 days
  to 30 years.
  This should effectively not change any behavior, as we don't rely on 
  RocksDB's built-in WAL file deletion mechanism. Instead, we tell RocksDB
  explicitly to delete which WAL files, depending on what other functionality
  (e.g. replication, index creation) still needs them or not.

* Deprecate the startup option `--rocksdb.wal-archive-size-limit` because
  it can be unsafe to use in environments that use replication (cluster,
  active failover, single-to-single replication). When using the option and
  limiting the total size of the WAL files in the archive, this may lead
  to still-needed WAL files being pruned too early. This can have side
  effects, such as aborting ongoing replication or index creation attempts.

* Remove temporary `CREATING_{number}` directories from hot backup in case a
  hot backup runs into an error.

* Added new startup options `--cache.ideal-lower-fill-ratio` and 
  `--cache.ideal-upper-fill-ratio` to control the minimum and maximum fill
  ratios for cache tables that trigger shrinking and growing of the table
  by the cache rebalancer. The default values are:

  - `0.04` (i.e. 4%) for the lower bound that triggers shrinking
  - `0.25` (i.e. 25%) for the upper bound that triggers growing

  These values were hard-coded in previous versions of ArangoDB.

* BTS-1490: Allow performing AQL updates locally without using DISTRIBUTE in 
  case the update AQL is of the pattern 

      FOR doc IN collection
        UPDATE <doc> IN collection

  Previously the optimization was only possible if the update AQL was of the
  pattern 

      FOR doc IN collection
        UPDATE <key> WITH <doc> IN collection

  Both <key> and <doc> refer to data from the collection enumeration variable
  `doc` here.

  Also fix the optimization in case a shard key attribute is updated with a
  value from a different attribute, e.g.

     FOR doc IN collection