@@ -1,0 +1,43 @@
+////////////////////////////////////////////////////////////////////////////////
+/// DISCLAIMER
+///
+/// Copyright 2014-2023 ArangoDB GmbH, Cologne, Germany
+/// Copyright 2004-2014 triAGENS GmbH, Cologne, Germany
+///
+/// Licensed under the Apache License, Version 2.0 (the "License");
+/// you may not use this file except in compliance with the License.
+/// You may obtain a copy of the License at
+///
+///     http://www.apache.org/licenses/LICENSE-2.0
+///
+/// Unless required by applicable law or agreed to in writing, software
+/// distributed under the License is distributed on an "AS IS" BASIS,
+/// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+/// See the License for the specific language governing permissions and
+/// limitations under the License.
+///
+/// Copyright holder is ArangoDB GmbH, Cologne, Germany
+///
+/// @author Jan Steemann
+////////////////////////////////////////////////////////////////////////////////
+
+#pragma once
+
+#include <cstdint>
+
+namespace arangodb {
+
+struct RocksDBMethodsMemoryTracker {
+  virtual ~RocksDBMethodsMemoryTracker() {}
+  virtual void reset() noexcept = 0;
+  virtual void increaseMemoryUsage(std::uint64_t value) = 0;
+  virtual void decreaseMemoryUsage(std::uint64_t value) noexcept = 0;
+
+  virtual void setSavePoint() = 0;
+  virtual void rollbackToSavePoint() noexcept = 0;
+  virtual void popSavePoint() noexcept = 0;
+
+  virtual size_t memoryUsage() const noexcept = 0;
+};
+
+}  // namespace arangodb
